--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -183,6 +183,57 @@
   object-fit: cover;
 }
 
+.carousel-single {
+  max-height: 70vh;
+}
+
+.carousel-single .carousel-item img,
+.carousel-single .carousel-item video {
+  max-height: 80vh;
+  object-fit: contain;
+  width: 100%;
+}
+
+/* Styles pour les miniatures du carousel */
+.carousel-thumbnails {
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* IE et Edge */
+}
+
+.carousel-thumbnails::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Opera */
+}
+
+.carousel-thumbnail {
+  width: 60px;
+  height: 60px;
+  border: 2px solid transparent;
+  opacity: 0.7;
+  transition: opacity 0.2s, border-color 0.2s;
+}
+
+.carousel-thumbnail:hover {
+  opacity: 1;
+}
+
+.carousel-thumbnail.active {
+  opacity: 1;
+  border-color: #fff;
+}
+
+.carousel-thumbnail-media {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+@media (min-width: 768px) {
+  .carousel-thumbnail {
+    width: 70px;
+    height: 70px;
+  }
+}
+
 
 /* chatbot */
  @keyframes bounce {
@@ -2462,4 +2513,13 @@ button[data-time]:disabled {
   }
 }
 
+/* Product Gallery Modal - Flèches et indicateurs noirs */
+.modal[id^="modalProduit_"] .carousel-control-prev-icon,
+.modal[id^="modalProduit_"] .carousel-control-next-icon {
+  filter: invert(1);
+}
+
+.modal[id^="modalProduit_"] .carousel-indicators button {
+  background-color: #ffffff;
+}
 
