--- a/app/views/public/pages/produit.html.erb
+++ b/app/views/public/pages/produit.html.erb
@@ -104,4 +104,7 @@
   </div>
 </div>
 
+
 <%= render partial: "product_gallery_modal", locals: { produit: @produit } %>
+
+<%= render partial: "public/pages/vous_aimerez_aussi", locals: { produits_similaires: @produits_similaires } %>
