--- a/app/views/public/pages/home.html.erb
+++ b/app/views/public/pages/home.html.erb
@@ -1,15 +1,22 @@
 <%= render partial: "public/pages/home/section_hero" %>
 
-<div class="container my-5 py-5">
-    <h2 class="text-light fs-3 text-uppercase py-4 mb-3">Nos collections</h2>
+<div class="container-fluid px-0 my-5 py-5">
+    <div class="container">
+      <div class="section-title-wrapper py-4 mb-3" data-aos="title-underline">
+        <h2 class="text-light fs-3 text-uppercase section-title" style="position: relative; display: inline-block;">Nos collections
+          <span class="section-title-underline" style="background: white;"></span>
+        </h2>
+      </div>
+    </div>
     <%= render partial: "public/shared/section_categories" %>
 </div>
+
 
 <div class="my-5">
     <%= render partial: "public/pages/home/section_boutique" %>
 </div>
 
-<%= render partial: "public/pages/fullpage_section_with_carousel", locals: {
+<%#= render partial: "public/pages/fullpage_section_with_carousel", locals: {
   background_image: "https://images.pexels.com/photos/14339112/pexels-photo-14339112.jpeg",
   title: "La boutique",
   paragraph: "Plongez dans l'univers d'Autour d'un Soir, où l'élégance rencontre l'exception. Notre boutique de Cannes vous accueille dans un cadre raffiné pour vous accompagner dans le choix de vos tenues de soirée. Depuis notre création, nous avons à cœur de vous offrir une expérience unique, alliant conseils personnalisés et sélection rigoureuse de nos pièces.",
@@ -35,6 +42,7 @@
   ]
 } %>
 
+<%= render partial: "public/pages/home/coups_de_coeur" %>
 
 <!-- Call to action -->
 <div class="text-center my-5 py-4" data-scroll-reveal>
