--- a/app/views/public/shared/_navbar.html.erb
+++ b/app/views/public/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-xxl bg-black shadow-sm sticky-top py-3">
+<nav class="navbar navbar-expand-xxl bg-black shadow-sm fixed-top py-3">
   <div class="container-fluid ps-2 pe-3 align-items-center justify-content-between">
     <div class="d-flex align-items-center gap-2">
       <%= link_to image_tag('/images/a1soirlogo2.png', class: 'mb-0 px-2', width: "350", alt: "Logo"), root_url %>
