--- a/app/views/public/pages/la_boutique/_section_map.html.erb
+++ b/app/views/public/pages/la_boutique/_section_map.html.erb
@@ -20,7 +20,7 @@
             </iframe>
           </div>
           <div class="text-center mt-4">
-            <%= link_to "https://www.google.com/maps/search/?api=1&query=#{CGI.escape('autour d\'un soir 06400 cannes')}", target: "_blank", class: "btn btn-outline-light" do %>
+            <%= link_to "https://www.google.com/maps/search/?api=1&query=#{CGI.escape('autour d\'un soir 06400 cannes')}", target: "_blank", class: "btn public-btn-border-radius btn-outline-light" do %>
               <i class="bi bi-arrow-up-right-square me-2"></i>Ouvrir dans Google Maps
             <% end %>
           </div>
