--- a/app/views/public/pages/nos_collections.html.erb
+++ b/app/views/public/pages/nos_collections.html.erb
@@ -16,3 +16,5 @@
 <div class="container my-5 py-5 text-center">
   <%= link_to "Voir tous les produits", produits_index_url(subdomain: "shop"), class: "btn btn-light btn-lg px-5 public-btn-border-radius" %>
 </div>
+
+<%= render partial: "public/pages/home/coups_de_coeur" %>
